# Agentic-Code-Editor

./: .gitignore  README.md  bundle.sh  pyproject.toml  requirements.txt
agentic_code_editor/: __init__.py  __main__.py  agent.py  agent_config.yaml  database.py  main.py  tool_definitions.py  tools.py  vector_db.py  ws_manager.py
agentic_code_editor/static/: 404.html  __next.__PAGE__.txt  __next._full.txt  __next._head.txt  __next._tree.txt  _not-found.html  _not-found.txt  index.html  index.txt
agentic_code_editor/static/_not-found/: __next._full.txt  __next._head.txt  __next._index.txt  __next._not-found.__PAGE__.txt  __next._not-found.txt  __next._tree.txt
backend/: MANIFEST.in  README.md  bundle.sh  pyproject.toml  requirements.txt
backend/agentic_code_editor/: __init__.py  agent.py  main.py  protocol.py  ws_manager.py
backend/agentic_code_editor/static/: __next.__PAGE__.txt  __next._head.txt  __next._index.txt  __next._tree.txt  _not-found.html  index.html  index.txt
backend/agentic_code_editor/static/_next/static/chunks/: 0awra5.plptlu.js  0kfabunpek77r.js  0nemg-my4a0_3.js  0tdkt9.shegwz.js  10~ogor7wg8ah.css  165s257zbf6w2.js
backend/agentic_code_editor/static/_not-found/: __next._full.txt  __next._head.txt  __next._not-found.__PAGE__.txt  __next._not-found.txt  __next._tree.txt
docs/: EMBEDDING_GUIDE.md
examples/: flask_embedding.py
frontend/: package-lock.json  package.json
frontend/prisma/: schema.prisma
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/editor/: agent-status.tsx  chat-panel.tsx  code-editor.tsx  diff-view.tsx  (+7 more)
frontend/src/lib/: api-client.ts
frontend/src/store/: agent.ts  editor.ts  file-system.ts
scratch/: repro_migration.py  verify_matching.py
(+13 files in other folders)
